
* Removed page hit logging functionality

Writing log entries to some logfile during frontend page hit was removed.
There are tons of solutions on the net and on server basis that can do a
better job than the core implementation ever did. Therefor the complete
code was dropped and all TypoScript config.stat* options are obsolete.

===============================================================================
Changes and Improvements
===============================================================================

This will list all changes and improvements between TYPO3 4.7 and 6.0. For
technical details see ChangeLog included in the typo3_src package.

-------------------------------------------------------------------------------
General
-------------------------------------------------------------------------------

* Extbase and fluid always loaded

The core extensions 'extbase' and 'fluid' are used in core classes like t3lib
and in several important core extensions. Extbase and fluid are now required
extensions and always loaded.

Other General Improvements
-------------------------------------------------------------------------------

* Autoloader namespace aware

The autoloader can now handle fully qualified namespaced class names.
If you use the fully qualified namespaced class name like
'\Tx\ExtName\Foo\Bar', the autoloader will find the containing class following
the extbase naming scheme. The mentioned class will be found if it is located
in file 'exttensionkey'/Classes/Foo/Bar.php.
It is also possible to use class names not following the extbase naming scheme
by providing the "name spaced class name -> file" mapping in ext_autoloader.php.

-------------------------------------------------------------------------------
Security
-------------------------------------------------------------------------------

...

-------------------------------------------------------------------------------
Backend